--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '<enter your client id here>',
+        'client_id': '94f81a3e-2573-40b7-8ede-b0a1ab9e19e2',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
